# gnu_fetchmailmon

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  TODO  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure.in
doc/: .gitignore  ChangeLog  Makefile.am  dialogfetchmailmon.1.in  fetchmailmond.1.in  txtfetchmailmon.1.in  wmfetchmailmon.1.in
fetchmailmon/: AUTHORS  config.h.in  configure.in
fetchmailmon/doc/: Makefile.am  txtfetchmailmon.1.in
fetchmailmon/src/: Controller.cc  ControllerText.h  SyntaxError.h  SyslogReader.h  txtfetchmailmon.cc
maintainer/: git2changelog.sh
sh/: ChangeLog  Makefile.am  dialogfetchmailmon.sh
src/: .gitignore  ChangeLog  Controller.h  ControllerDBus.cc  ControllerDBus.h  ControllerDBusSimple.cc  ControllerDBusSimple.h  ControllerDockApp.cc  ControllerDockApp.h  ControllerText.cc  MailLogScanner.cc  MailLogScanner.h  Makefile.am  SyntaxError.cc  SyntaxError.h  SyslogReader.cc  SyslogReader.h  fetchmailmon.h  fetchmailmond-infos.xml  fetchmailmond.cc  marshall.list  txtfetchmailmon.c  txtfetchmailmon.cc  txtfetchmailmon.py  txtmainloop.c  version.c  version.cc  version.h  wmfetchmailmon.cc
