dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta - will be overwritten
dnl If you don't want it to overwrite it,
dnl 	Please disable it in the Anjuta project configuration

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(fetchmailmon, 0.5)
AM_CONFIG_HEADER(config.h)


AC_LANG_CPLUSPLUS

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_LN_S
AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_CXX
AC_PROG_CXXCPP

dnl Checks for libraries.
dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_ISC_POSIX
dnl do not work AC_C_CONST

dnl Checks for library functions.
dnl Checks for Additional stuffs.
AC_PATH_X
if test "$no_x"; then
	AC_MSG_ERROR([The path for the X11 files not found!
	Make sure you have X and it's headers and libraries(the -devel packages in Linux) installed.])
fi
AC_SUBST(x_libraries)
AC_SUBST(x_includes)

dnl WMApp library
AC_ARG_WITH(wmapp,[  --with-wmapp=path       WMApp library path])
AC_MSG_CHECKING([WMApp directory])
if test "x$with_wmapp" = "xyes"; then
  AC_MSG_RESULT([not set explicitly.])
  AC_MSG_ERROR([WMApp library is required and could not be automatically found. Use '--with-wmapp=path' option.])
fi
if test "x$with_wmapp" = "xno"; then
  AC_MSG_RESULT([disabled.])
  AC_MSG_ERROR([WMApp library is required. Use '--with-wmapp=path' option.])
fi
if test "x$with_wmapp" != "x"; then
  AC_MSG_RESULT("WMApp prefix path is $with_wmapp")
  here=`pwd`
  cd /tmp
  if test -d "$with_wmapp"; then
    wmapp_libraries=$with_wmapp ; AC_SUBST(wmapp_libraries)
    wmapp_includes=$with_wmapp ; AC_SUBST(wmapp_includes)
  else
     AC_MSG_ERROR([$with_wmapp is not an ABSOLUTE directory (must begin with '/'). Check '--with-wmapp' argument.])
  fi
  cd $here
else
  AC_MSG_ERROR([WMApp library is required and could not be automatically found. Use '--with-wmapp=path' option.])
fi

dnl AC_CHECK_HEADERS(wmapp.h,,AC_MSG_ERROR("WMApp library required"))

dnl mail.log filename
if test "x$DEFAULT_MAILLOG_FILENAME" = "x"
then
  DEFAULT_MAILLOG_FILENAME="/var/log/mail.log"
fi
AC_DEFINE_UNQUOTED(DEFAULT_MAILLOG_FILENAME,"$DEFAULT_MAILLOG_FILENAME",[Absolute filename to system mail log.])
dnl We also need this variable to update the man pages
AC_SUBST(DEFAULT_MAILLOG_FILENAME)

dnl Set PACKAGE SOURCE DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`

dnl Set PACKAGE PREFIX
if test "x${prefix}" = "xNONE"; then
  packageprefix=${ac_default_prefix}
else
  packageprefix=${prefix}
fi

dnl Set PACKAGE DATA & DOC DIR
packagedatadir=share/${PACKAGE}
packagedocdir=doc/${PACKAGE}

dnl Set PACKAGE DIRS in config.h.
packagepixmapsdir=${packagedatadir}/pixmaps
packagehelpdir=${packagedatadir}/help
packagemenudir=${packagedatadir}

dnl Subst PACKAGE_DATA_DIR.
NO_PREFIX_PACKAGE_DATA_DIR="${packagedatadir}"
AC_SUBST(NO_PREFIX_PACKAGE_DATA_DIR)
PACKAGE_DATA_DIR="${packageprefix}/${packagedatadir}"
AC_SUBST(PACKAGE_DATA_DIR)

dnl Subst PACKAGE_DOC_DIR.
NO_PREFIX_PACKAGE_DOC_DIR="${packagedocdir}"
AC_SUBST(NO_PREFIX_PACKAGE_DOC_DIR)
PACKAGE_DOC_DIR="${packageprefix}/${packagedocdir}"
AC_SUBST(PACKAGE_DOC_DIR)

dnl Subst PACKAGE_PIXMAPS_DIR.
NO_PREFIX_PACKAGE_PIXMAPS_DIR="${packagepixmapsdir}"
AC_SUBST(NO_PREFIX_PACKAGE_PIXMAPS_DIR)
PACKAGE_PIXMAPS_DIR="${packageprefix}/${packagepixmapsdir}"
AC_SUBST(PACKAGE_PIXMAPS_DIR)

dnl Subst PACKAGE_HELP_DIR.
NO_PREFIX_PACKAGE_HELP_DIR="${packagehelpdir}"
AC_SUBST(NO_PREFIX_PACKAGE_HELP_DIR)
PACKAGE_HELP_DIR="${packageprefix}/${packagehelpdir}"
AC_SUBST(PACKAGE_HELP_DIR)

dnl Subst PACKAGE_MENU_DIR.
NO_PREFIX_PACKAGE_MENU_DIR="${packagemenudir}"
AC_SUBST(NO_PREFIX_PACKAGE_MENU_DIR)
PACKAGE_MENU_DIR="${packageprefix}/${packagemenudir}"
AC_SUBST(PACKAGE_MENU_DIR)

AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${packageprefix}/${packagedatadir}")
AC_DEFINE_UNQUOTED(PACKAGE_DOC_DIR, "${packageprefix}/${packagedocdir}")
AC_DEFINE_UNQUOTED(PACKAGE_PIXMAPS_DIR, "${packageprefix}/${packagepixmapsdir}")
AC_DEFINE_UNQUOTED(PACKAGE_HELP_DIR, "${packageprefix}/${packagehelpdir}")
AC_DEFINE_UNQUOTED(PACKAGE_MENU_DIR, "${packageprefix}/${packagemenudir}")
AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}")

AC_OUTPUT([
Makefile
doc/Makefile
doc/txtfetchmailmon.1
doc/dialogfetchmailmon.1
doc/wmfetchmailmon.1
src/Makefile
sh/Makefile
])

