## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

bin_SCRIPTS = dialogfetchmailmon

EXTRA_DIST = dialogfetchmailmon.sh

CLEANFILES = $(bin_SCRIPTS)

dialogfetchmailmon: dialogfetchmailmon.sh
	cp $< $@
