## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

AM_CXXFLAGS = ${GLIB_CFLAGS}
AM_LDFLAGS = ${GLIB_LIBS}

bin_PROGRAMS = txtfetchmailmon 

txtfetchmailmon_SOURCES = \
	txtfetchmailmon.cc\
	version.cc\
	version.h\
	Controller.h\
	ControllerText.cc\
	ControllerText.h\
	MailLogScanner.cc\
	MailLogScanner.h\
	SyntaxError.cc\
	SyntaxError.h

